# plingo

./: LICENSE  README.md  setup.cfg  setup.py
.github/: conda.py  deploy.yml  requirements.txt  trigger.sh
.github/conda/: meta.yaml
.github/ppa-wip/: build.sh
.github/ppa-wip/focal/debian/: changelog  control
.github/ppa-wip/jammy/debian/: changelog  control  copyright
.github/ppa-wip/noble/debian/: changelog  control
.github/workflows/: pipsource.yml
examples/: README.md  cplint-plog.plp  cplint.plp
examples/lpmln/: README.md  birds.plp  birds_evid.lp  birds_plingo.plp  birds_query.plp  firing_squad.evid  firing_squad.plp
examples/plingo/: alarm_plingo.plp  birds_plingo.plp
examples/plog/: README.md  bayesian_squirrel.plp  dice.plp  monty_hall.lp  monty_hall_variant.plp  moving_robot.plp  simpsons_paradox.lp  simpsons_paradox.plp  two_actions.lp
examples/plog/plog2.0/: binopSort.lp  clingocons.lp  constraint.lp  convert_plog2_to_plingo.py  do1.plp  donaive.plp  funcSort.lp  insomnia_noquery.plp  multipleabdsupports.plp  obs1.plp  obs2.plp  p1.lp  rels.plp  rels0.lp
examples/problog/: README.md  alarm.lp  alarm.plp  alarm_plingo.lp  monty_hall_alternative.lp  simple.lp  tossing_coins.plp  tossing_coins2.lp  tossing_coins2_plingo.lp
plingo/: __init__.py  meta.lp  meta_problog.py  meta_readable.lp  opt.py  plingo_app.py  plog.py  probability.py  query.py  transformer.py
plingo/meta-problog/: ground-meta-problog.lp  meta-problog.lp  probs-meta-problog.lp
