[metadata]
name = plingo
version = 1.0.0
author = Nicolas Rühling
author_email = nruehling@uni-potsdam.de
description = Probabilistic extension for clingo 
long_description = file: README.md
long_description_content_type = text/markdown
license = MIT
url = https://github.com/nrueh/plingo/

[options]
packages = plingo
install_requires =
    clingo>=5.5

[options.entry_points]
console_scripts =
    plingo = plingo:main
